# cybership_software_suite

./: .gitmodules  Dockerfile.raspi  README.md  docker-compose.yml  dockerfile  install_software.sh  lazy_install.sh  raspi.dockerfile
cybership_bringup/: CMakeLists.txt  README.md  package.xml
cybership_bringup/config/enterprise1/: mocap_transformer.yaml  servo_driver.yaml  thruster_driver.yaml
cybership_bringup/launch/: all.launch.py  all.launch.xml  drillship.launch.py  drillship.launch.xml  enterprise.launch.py  enterprise.launch.xml  enterprise1.bak.launch.py  enterprise1.launch.py  jonny.launch.py  localization.launch.py  localization.launch.xml  voyager.launch.py  voyager.launch.xml
cybership_bringup/launch/include/: azimuth_controller.launch.py  azimuth_controller.launch.xml  force_multiplexer.launch.py  force_multiplexer.launch.xml  imu_bno055.launch.py  imu_bno055.launch.xml  motion_capture_system_connector.launch.py  motion_capture_system_transformer.launch.py  motion_capture_system_transformer.launch.xml  robot_localization.launch.py  robot_localization.launch.xml  servo_driver.launch.py  servo_driver.launch.xml  thruster_control.launch.py  thruster_control.launch.xml  urdf_description.launch.py  urdf_description.launch.xml
cybership_bringup/param/enterprise1/: mocap_connector.yaml  mocap_transformer.yaml  servo_driver.yaml  thruster_driver.yaml
cybership_controller/: CMakeLists.txt  README.md  package.xml
cybership_controller/nodes/: los_guidance_client.py  los_guidance_server.py  los_guidance_server_force_ctrl.py  position_control.py  straight_line_i_node.py  straight_line_node.py  velocity_control.py
cybership_controller/src/cybership_controller/: utils.py
cybership_controller/src/cybership_controller/guidance/: los.py  (+5 more)
cybership_dp/: CMakeLists.txt  README.md  package.xml  requirements.txt
cybership_dp/config/: force_controller.yaml  velocity_controller.yaml
cybership_dp/cybership_dp/: force_controller_base.py
cybership_dp/cybership_dp/drillship/: force_controller.py
cybership_dp/cybership_dp/enterprise/: force_controller.py
cybership_dp/cybership_dp/velocity_control/: backstepping.py
cybership_dp/cybership_dp/voyager/: force_controller.py  velocity_controller.py
cybership_dp/launch/: dp.launch.py  dp.launch.xml  force_controller.launch.py  position_controller.launch.py  position_controller.launch.xml  thrust_allocation.launch.py  thrust_allocation.launch.xml  velocity_controller.launch.py  velocity_controller.launch.xml
cybership_dp/nodes/: force_controller.py  position_control_client_node.py  position_control_node.py  thrust_allocation_node.py  velocity_control_node.py  velocity_controller.py
cybership_interfaces/: CMakeLists.txt  README.md  package.xml
cybership_interfaces/action/: LOSGuidance.action
cybership_interfaces/msg/: PerformanceMetrics.msg
cybership_interfaces/srv/: ResetSimulator.srv
cybership_mocap/: CMakeLists.txt  README.md  package.xml
cybership_mocap/include/cybership_mocap/: cybership_mocap.hpp
cybership_mocap/launch/: cybership_mocap.launch.py
cybership_mocap/param/: config.yaml
cybership_mocap/src/: cybership_mocap.cpp  cybership_mocap_node.cpp
cybership_observer/: CMakeLists.txt  package.xml
cybership_observer/launch/: enu_to_ned_odom.launch.py  enu_to_ned_twist.launch.py  ned_to_enu.launch.py  ned_world_tf.launch.py
cybership_observer/nodes/: enu_to_ned_odom.py  enu_to_ned_twist.py  ned_to_enu_transformer.py
cybership_observer/src/: ned_to_enu_transformer.cpp
cybership_observer/src/cybership_observer/: observer.py  observer_ros.py
cybership_simulator/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
cybership_simulator/config/: multi_vessel_simulation.yaml  simulation.yaml
cybership_simulator/cybership_simulator/: base.py  cybership_common.py  cybership_enterprise.py  cybership_enterprise1.py  drillship.py  enterprise.py  voyager.py
cybership_simulator/cybership_simulator/common_tools/: lib.py
cybership_simulator/cybership_simulator/simulator/: cybership_enterprise1.py
cybership_simulator/launch/: drillship.launch.py  drillship.launch.xml  enterprise.launch.py  enterprise.launch.xml  multi_vessel.launch.py  multi_vessel.launch.xml  simulator.launch.py  simulator.launch.xml  voyager.launch.py  voyager.launch.xml
cybership_simulator/src/cybership_simulator/: base.py  drillship.py  enterprise.py  voyager.py
cybership_teleop/: CMakeLists.txt  package.xml
cybership_teleop/config/: cybership_enterprise1.yaml  enterprise1.yaml  ps5.yaml  voyager.yaml
cybership_teleop/config/allocation/: ps5.yaml
cybership_teleop/config/simple/: ps5.yaml
cybership_teleop/config/velocity/: ps5.yaml
cybership_teleop/launch/: allocation.launch.py  enterprise1.launch.py  enterprise1.launch.xml  jonny.launch.py  joy.launch.py  simple.launch.py  teleop.launch.py  utilities.py  velocity.launch.py  voyager.launch.py
cybership_tests/: CMakeLists.txt  README.md  package.xml  requirements.txt
cybership_tests/cybership_tests/: four_corner.py  four_corner_client.py  four_corner_i.py  four_corner_line_of_sight.py  go_to.py  go_to_client.py  go_to_server.py  go_to_service.py  mission.py  mission_1.py  pid_position_server.py  reference_filter_server.py  square_test.py  square_test_pid.py  velocity_control.py  velocity_control_test.py
cybership_thrusters/: CMakeLists.txt  README.md  package.xml
cybership_thrusters/launch/: enterprise1.launch.py
cybership_thrusters/param/: config.yaml
cybership_thrusters/src/: azimuth.cpp  cybership_thrusters.cpp  cybership_thrusters_node.cpp  fixed.cpp  voith_schneider.cpp
cybership_utilities/: CMakeLists.txt  README.md  package.xml  requirements.txt
cybership_utilities/cybership_utilities/: launch.py  utilities.py
cybership_utilities/html/: app.js  index.html  styles.css
cybership_utilities/launch/: ui.launch.py
cybership_utilities/nodes/: force_mux_gui.py  mission.py  web_interface_server.py
cybership_utilities/scripts/: install_discovery_service.sh
cybership_utilities/service/: fastdds_discovery.service
(+80 files in other folders)
